third_party/rust/pin-project/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/call-drop-inner.rs:12:9
   |
12 |         __drop_inner(__self);
   |         ^^^^^^^^^^^^ ------ supplied 1 argument
   |         |
   |         expected 0 arguments
   |
note: function defined here
  --> $DIR/call-drop-inner.rs:11:8
   |
11 |     fn drop(mut self: Pin<&mut Self>) {
   |        ^^^^
